@@ -1,4 +1,4 @@
-pupmod-simp-windowmanager - A Puppet Module for managing the GDM Window Manager
+pupmod-simp-gnome - A Puppet Module for managing GNOME
 
 --
 
